tests/NormalTests/paczka2/big_fuzzy/42852349.err
Error in line 7: A508 A508 3,04
Error in line 22: PiI1d A&08 37,2
Error in line 27: PiI1d A508 19,0
Error in line 38: PiI1d S919 35,5
Error in line 46: aK6s S919 68,7
Error in line 33: QB3fh A508 76,4
Error in line 49: A508 S919 20,6
Error in line 52: FT6( S6(( 8,1
Error in line 45: FT60 A508 41,9
Error in line 58: FT60 S600 17,8
Error in line 77: QB3fh S919 9,2
Error in line 76: zGLxSWaoPEc A508 77,2
Error in line 81: aK6s S919 22,1
Error in line 83: zGLxSWoPEc S600 56,0
Error in line 82: aK6s A508 64,8
Error in line 54: A508 S600 13,6
Error in line 78: QB3fh S600 53,5
Error in line 86: aK6s S919 43,2
Error in line 79: zGLxSWaoPEc S600 13,3
Error in line 84: yXY9nIO S919 87,8
Error in line 90: zGLxSWaoPEc S919 46,0
Error in line 98: PiI1d S919 77,8
Error in line 93: zGLxSWaoPEc A508 32,0
Error in line 132: aK6sDA508D95,6
Error in line 129: aK6s A508 48,8
Error in line 100: FT60 S543 151,9
Error in line 145: aK6s A508 45,3
Error in line 139: yXY9nIO S919 42,3
Error in line 152: zGLxSWaoPEc S600 59,1
Error in line 151: yXY9nIO S543 29,9
Error in line 155: A508 S919 67,1
Error in line 158: aK6s S919 77,5
Error in line 159: A508 S543 66,7
Error in line 140: FT60 S600 7,7
Error in line 167: PiI1d S543 71,5
Error in line 171: zGLxSWaoPEc S543 90,5
Error in line 188: QB3fh A508 37,5
Error in line 196: A508 A508 20,7
Error in line 205: FT60 S600 42,6
Error in line 209: QB3fh S600 27,9
Error in line 217: A508 S919 18,3
Error in line 228: FT60 S600 -5,1
Error in line 224: PiI1d S600 53,3
Error in line 232: zGLxSWaoPEc A508 90,6
Error in line 233: A508 A508 64,9
Error in line 238: A508 S600 75,0
